# school_cpp_alongside_project

TechnologicDemo/: TechnologicDemo.cpp  TechnologicDemo.vcxproj.filters
finalhw/: CMakeLists.txt  main.cpp  poly_table.cpp  poly_table.h  sorter.cpp  sorter.h
homeworks/c01-nasobilka/: CMakeLists.txt  main.cpp
homeworks/c02-counter/: counter.cpp  counter.h  main.cpp
homeworks/c03-frekvence_slov/: CMakeLists.txt  main.cpp
labs/: ConsoleApp.cpp  main.cpp
labs/c02-counter/: CMakeLists.txt
labs/c04-slovnik/: CMakeLists.txt  main.cpp  operations.cpp  operations.h
labs/functors/: CMakeLists.txt  main.cpp
labs/iterator of stretchy array/: StretchyArray.h  main.cpp
labs/polymorfism/: CMakeLists.txt  Senzam.cpp  Senzam.h
labs/seznam prikladu ze cviceni/gumové pole s iterátory a výjimkami/: CMakeLists.txt  StretchyArray.cpp  StretchyArray.h  main.cpp
labs/seznam prikladu ze cviceni/polymorfny kontejner/: main.cpp
labs/seznam prikladu ze cviceni/šablona sčítačky fungující se zlomkem/: zlomek.h
labs/templating/: CMakeLists.txt  main.cpp
project/docs/: README.md  User_Documentation.txt
project/src/: README.md
project/src/linux gcc/: CMakeLists.txt  README.md  config.h  config.txt  confirm.txt  ocr.cpp  vcpkg.json
project/src/linux_gcc/: CMakeLists.txt  OCR_MTG_Scanner_Linux.cpp  camera.cpp  card_db.h  config.cpp  config.txt  ocr.cpp  ocr.h  vcpkg.json
project/src/technologicdemo/: main.cpp
project/src/windows VS/: OCR_MTG_Scanner.sln  README.md  TechDemon.sln  TechnologicDemo.sln  confirm.txt  vcpkg.json
project/src/windows VS/OCR_MTG_Scanner/: OCR_MTG_Scanner.cpp  OCR_MTG_Scanner.vcxproj  camera.cpp  camera.h  card_db.cpp  card_db.h  names_of_cards.txt  ocr.cpp  ocr.h
project/src/windows VS/TechDemon/: TechDemon.cpp  TechDemon.vcxproj  camera.cpp  camera.h  card_db.h  ocr.cpp  ocr.h
project/src/windows VS/TechDemon OLD/: camera.cpp  card_db.cpp  ocr.cpp
project/src/windows VS/TechnologicDemo/: TechnologicDemo.cpp  TechnologicDemo.vcxproj
project/src/windows_VS/: README.md
project/src/windows_VS/OCR_MTG_Scanner/: OCR_MTG_Scanner.vcxproj  camera.h  config.txt  ocr.cpp
